logo fixed on mobile display
added width:100% on all logo img property

--- a/assets/main.css
+++ b/assets/main.css
@@ -1062,8 +1062,10 @@ h1 {
   }
 }
 
-/* END OF MOBILE WEBSITE */
+@media only screen (max-width: 400px) {
+}
 
+/* END OF MOBILE WEBSITE */
 .wrapper {
   margin: 0 auto;
 }
